--- a/_data/blogs.yml
+++ b/_data/blogs.yml
@@ -132,3 +132,8 @@
   title: Interview with a FOSSASIA Contributer | Ploypiti Piyaprapan
   img: aditya-blog-2.jpg
   author_name: Aditya Dutt
+  
+  - url: URL to the blog
+  title: Title of the blog
+  img: IsabelBlog.jpg
+  author_name: Name of the author of the blog (most likely you)
